set up controller and ispalyed data from controller

--- a/views/index.html
+++ b/views/index.html
@@ -37,18 +37,16 @@
         <!-- albums! -->
         <div id='albums'>
 
-
             <!-- one album -->
 
-            <script id="albums-template" type="text/x-handlebars-template">
-              {{#each albums}}
+
+              <!-- {{#each albums}} -->
                 <div class="row album">
+                  <script id="albums-template" type="text/x-handlebars-template">
 
                     <div class="col-md-10 col-md-offset-1">
                         <div class="panel panel-default">
                             <div class="panel-body">
-
-
                                 <!-- begin album internal row -->
 
                                     <div class="col-md-3 col-xs-12 thumbnail album-art">
@@ -57,8 +55,8 @@
                                     <div class="col-md-9 col-xs-12">
                                         <ul class="list-group">
                                             <p>
-                                                <b>{{name}}</b> by {{artistName}}
-                                                <br> Release date: {{releaseDate}}
+                                                <b>{{album.name}}</b> by {{album.artistName}}
+                                                <br> Release date: {{album.releaseDate}}
                                             </p>
                                         </ul>
                                     </div>
@@ -72,11 +70,11 @@
                         </div>
                     </div>
                 </div>
-                {{/each}}
               </script>
+                <!-- {{/each}} -->
+
 
             <!-- end one album -->
-
 
         </div>
     </section>
