--- a/views/index.html
+++ b/views/index.html
@@ -53,12 +53,12 @@
                                         <img src="images/800x800.png" alt="album image">
                                     </div>
                                     <div class="col-md-9 col-xs-12">
-                                        <ul class="list-group">
+                                        <div class="list-group">
                                             <p>
                                                 <b>{{album.name}}</b> by {{album.artistName}}
                                                 <br> Release date: {{album.releaseDate}}
                                             </p>
-                                        </ul>
+                                        </div>
                                     </div>
 
                                 <!-- end of album internal row -->
