--- a/views/index.html
+++ b/views/index.html
@@ -28,6 +28,19 @@
         </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <form class="form-inline" id="addAlbum" data-id={{_id}}>
+  <div class="form-group">
+    <input type="text" class="form-control" name="name" placeholder="Album Name"> <br>
+    <input type="text" class="form-control" name="artistName" placeholder="Artist Name"> <br>
+    <input type="text" class="form-control" name="releaseDate" placeholder="Released On"> <br>
+  </div>
+  <button type="submit" class="btn btn-info">Add an Album</button>
+</form>
+      </div>
+  </div>
+
     <section class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
