sprint 2 step2 serialized data

--- a/views/index.html
+++ b/views/index.html
@@ -30,11 +30,12 @@
 
     <div class="container">
       <div class="row">
-        <form class="form-inline" id="addAlbum" data-id={{_id}}>
+        <form class="form-inline" id="addAlbumForm" data-id={{_id}}>
   <div class="form-group">
     <input type="text" class="form-control" name="name" placeholder="Album Name"> <br>
     <input type="text" class="form-control" name="artistName" placeholder="Artist Name"> <br>
     <input type="text" class="form-control" name="releaseDate" placeholder="Released On"> <br>
+    <input type="text" class="form-control" name="genres" placeholder="Genres"> <br>
   </div>
   <button type="submit" class="btn btn-info">Add an Album</button>
 </form>
