--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     <input type="text" class="form-control" name="name" placeholder="Album Name"> <br>
     <input type="text" class="form-control" name="artistName" placeholder="Artist Name"> <br>
     <input type="text" class="form-control" name="releaseDate" placeholder="Released On"> <br>
-    <input type="text" class="form-control" name="genres" placeholder="Genres"> <br>
+    <!-- <input type="text" class="form-control" name="genres" placeholder="Genres"> <br> -->
   </div>
   <button type="submit" class="btn btn-info">Add an Album</button>
 </form>
